sync-fw (0.5.1-4) unstable; urgency=low

  * removed a function internal to synchronizer that is not needed anymore    

 -- Srikanth <ext-srikanth.kavoori@nokia.com>  Thu, 09 Sep 2010 10:51:14 +0530

sync-fw (0.5.1-3) unstable; urgency=low

  * Added missing headers to libsynccommon files 

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Tue, 07 Sep 2010 10:08:00 +0530

sync-fw (0.5.1-2) unstable; urgency=low

  * Fixes: NB#188990 - Sync profile under ~/.sync

 -- Santosh Puranik <santosh.puranik@nokia.com>  Tue, 31 Aug 2010 19:08:00 +0530

sync-fw (0.5.1-1) unstable; urgency=low

  * Fixes: NB#183589 -  Development packages libmeegosyncml-dev and
    sync-fw-dev does not contain .pc files
  * Changed the dbus interface name  

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Mon, 30 Aug 2010 14:41:52 +0530

sync-fw (0.5.1-0) unstable; urgency=low

  * Added functions to retrieve a private thread specific dbus connection 
  * Added: libsyncommon/SyncDBusConnection.h 
           libsyncommon/SyncDBusConnection.cpp 

 -- Srikanth Kavoori <ext-srikanth.kavoori@nokia.com>  Mon, 30 Aug 2010 11:36:34 +0530

sync-fw (0.5.0-22) unstable; urgency=low

  * Fixes: NB#184746

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Fri, 27 Aug 2010 15:36:34 +0530

sync-fw (0.5.0-21) unstable; urgency=low

  * Tag for Meego.

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Tue, 24 Aug 2010 16:00:00 +0300

sync-fw (0.5.0-20) unstable; urgency=low

  * Recompile.

 -- Deepak Kodihalli <deepak.kodohalli@nokia.com>  Thu, 19 Aug 2010 12:06:17 +0530

sync-fw (0.5.0-19) unstable; urgency=low

  * Fixes: NB#179954 -  It took ~10 minutes to display device contacts from
    NOS

 -- Deepak Kodihalli <deepak.kodohalli@nokia.com>  Tue, 17 Aug 2010 12:06:17 +0530

sync-fw (0.5.0-18) unstable; urgency=low

  * Removed unnecessary stuff from debian/rules which was causing compilation
    issues!
  * Performance improvements to deleted items storage