@@ -7,6 +7,9 @@ include /usr/share/cdbs/1/class/qmake.mk
 CFLAGS += -Wall -Wextra -Wno-unused-parameter 
 CXXFLAGS += -Wall -Wextra -Wno-unused-parameter 
 
+# architecture we're building for
+DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
+
 configure: configure-stamp
 configure-stamp:          
 	dh_testdir        
@@ -45,6 +48,11 @@ binary-arch: build install
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
+ifeq ($(DEB_HOST_ARCH), arm)
+	aegis-deb-add -control debian/sync-fw/DEBIAN/control .. debian/sync-fw.aegis=_aegis
+else ifeq ($(DEB_HOST_ARCH), armel)
+	aegis-deb-add -control debian/sync-fw/DEBIAN/control .. debian/sync-fw.aegis=_aegis
+endif
 	
 DEB_DESTDIR := $(CURDIR)/debian/tmp
 DEB_DH_INSTALL_SOURCEDIR := debian/tmp
